k8s/security/network policies/net-policy-laravel.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: laravel-only-from-traefik
  namespace: server-hub
spec:
  podSelector:
    matchLabels:
      app: laravel

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik

      ports:
        - protocol: TCP
          port: 8080
